--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-Flask==3.1.0
-google-api-python-client==2.169.0
-google-auth==2.39.0
-requests==2.32.3
-python-dotenv==1.1.0
-gunicorn==21.2.0
-gevent==24.2.1
+fastapi==0.104.1
+uvicorn==0.23.2
+httpx==0.25.1
+python-multipart==0.0.6
